Mobile css adjuctments

--- a/client/public/index.html
+++ b/client/public/index.html
@@ -7,7 +7,7 @@
     <meta name="theme-color" content="#27536b" />
     <meta
       name="description"
-      content="Data consummed from https://api.le-systeme-solaire.net/"
+      content="You can check about Solar System bodies"
     />
     <meta name="keywords" content="Frontend, React, css, html">
     <meta name="author" content="Jorge Coronilla">
